@@ -12,6 +12,13 @@ Library
 
 - Issue #25029: Fixes MemoryError in test_strptime
 
+Build
+-----
+
+- Issue #25027: Reverts partial-static build options and adds
+  vcruntime140.dll to Windows installation.
+
+
 What's New in Python 3.5.0 release candidate 3?
 ===============================================
 
